# magpie

./: .clang-format  .editorconfig  .gitignore  CODEOWNERS  README.md  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  flawfinder.yml  test.yml
clutter/clutter/: clutter-frame-clock.c  clutter-frame-clock.h  clutter-frame-private.h  clutter-frame.c  clutter-frame.h  clutter-stage-view.c  meson.build
cogl/: cogl-config.h.meson  meson.build
cogl/cogl/: cogl-onscreen-private.h  cogl-onscreen.c  meson.build
cogl/cogl-pango/: meson.build
data/: 50-mutter-navigation.xml  61-magpie.rules  com.solus-project.magpie.x11.gschema.xml.in  magpie-schemas.convert  magpie.desktop.in  meson.build  org.buddiesofbudgie.MagpieWm.desktop  org.gnome.mutter.gschema.xml.in
data/dbus-interfaces/: org.gnome.Mutter.DisplayConfig.xml
doc/man/: magpie-restart-helper.1  magpie.1  meson.build
po/: POTFILES.in  ab.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  ha.po  he.po  hi.po  hr.po  hu.po  id.po  ig.po  is.po  it.po  (+44 more)
protocols/: budgie-keyboard-shortcuts.xml
scripts/: mesonPostInstall.sh  mkRelease.sh
src/: foreign_toplevel.cpp  foreign_toplevel.hpp  input.c  input.cpp  input.h  input.hpp  layer.c  layer.cpp  layer.h  layer.hpp  main.c  main.cpp  meson.build  output.c  output.cpp  output.h  output.hpp  popup.c  popup.cpp  popup.h  popup.hpp  server.c  server.cpp  server.h  server.hpp  surface.c  surface.cpp  surface.h  surface.hpp  tearing.cpp  tearing.hpp  types.h  types.hpp  view.cpp  view.h  view.hpp  wlr-wrap-end.hpp  wlr-wrap-start.hpp  xdg_view.c  xdg_view.cpp  (+6 more)
src/backends/: meta-crtc.c  meta-crtc.h  meta-monitor-config-manager.c  meta-monitor-config-manager.h  meta-monitor-config-store.c  meta-monitor-manager-dummy.c  meta-monitor-manager-private.h  meta-monitor-manager.c  meta-monitor.c  meta-monitor.h  meta-output.c  meta-settings-private.h  meta-settings.c  meta-stage-impl.c
src/backends/native/: meta-crtc-kms.c  meta-cursor-renderer-native.c  meta-kms-crtc.c  meta-kms-crtc.h  meta-kms-impl-device-atomic.c  meta-kms-impl-device-simple.c  meta-kms-impl-device.c  meta-kms-page-flip.c  meta-kms-update-private.h  meta-kms-update.c  meta-kms.c  meta-kms.h  meta-monitor-manager-native.c  meta-onscreen-native.c  meta-onscreen-native.h  meta-renderer-native.c
src/backends/x11/: meta-crtc-xrandr.c  meta-crtc-xrandr.h  meta-gpu-xrandr.c  meta-monitor-manager-xrandr.c  meta-output-xrandr.c  meta-output-xrandr.h
src/compositor/: meta-compositor-x11.c
src/compositor/plugins/: meson.build
src/core/: frame.c  keybindings.c  place.c  restart.c  window-private.h  window.c
src/decorations/: ssd.cpp  ssd.hpp  xdg_decoration.cpp  xdg_decoration.hpp
src/input/: constraint.cpp  constraint.hpp  cursor.cpp  cursor.hpp  keyboard.cpp  keyboard.hpp  keyboard_shortcuts_subscriber.cpp  keyboard_shortcuts_subscriber.hpp  seat.cpp  seat.hpp
src/meta/: prefs.h  window.h
src/protocols/: budgie_keyboard_shortcuts.cpp  budgie_keyboard_shortcuts.hpp
src/surface/: layer.cpp  layer.hpp  popup.cpp  popup.hpp  subsurface.cpp  subsurface.hpp  surface.hpp  view.cpp  view.hpp  xdg_decoration.cpp  xdg_decoration.hpp  xdg_view.cpp  xwayland_view.cpp
src/tests/: meta-monitor-manager-test.c  native-kms-render.c
src/ui/: frames.c
src/wayland/: meta-wayland-gtk-shell.c
src/x11/: atomnames.h  events.c  meta-x11-display.c  window-props.c  window-x11.c
subprojects/: wlroots.wrap
